# flashcam-simulation

./: CITATION.cff  README.md  setup.cfg
docs/: conf.py
files/: fc1764_layout_patches.txt  fc1764_layout_pixels.txt  ref_ps.ecsv
src/fc_sim/: camera.py  constants.py  fake_muon_simtel.py  flatfielding_lightemission.py  flatfielding_lightemission_improved.py  fun.py  toymodel.py
src/flashcam-simulation/: camera.py  constants.py  fun.py  noise.py  toymodel.py
tutorials/: noise.ipynb  simulation_testing.ipynb
